Applied improvements possible with Java 21